--- a/.env
+++ b/.env
@@ -5,8 +5,7 @@ VITE_MUSIC_API = "https://music-api.xbwlcm.com/"
 
 # 网易云解灰 API 地址（可选功能）
 ## 需部署 API，详见 https://github.com/imsyy/UNM-Server#%E8%BF%90%E8%A1%8C
-VITE_UNM_API = "https://api-unm.imsyy.top/"
-# VITE_UNM_API = "http://localhost:5678/"
+VITE_UNM_API = "https://unm-server.bsgun.cn/"
 
 # 站点标题
 VITE_SITE_TITLE = "SPlayer"
